# rankchoice

./: .env.example  .gitignore  DEVELOPMENT_STATUS.md  DEVELOPMENT_TODO.md  LICENSE  Makefile  PLANNING.md  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  setup.sh  test_anonymous_voters.js
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/docs/: TESTING_GUIDE.md
backend/migrations/: 001_initial_schema.sql  002_core_schema.sql  003_auth_tokens.sql
backend/src/: lib.rs  main.rs
backend/src/api/: auth.rs  candidates.rs  mod.rs  polls.rs  results.rs  voters.rs  voting.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth_token.rs  ballot.rs  candidate.rs  mod.rs  poll.rs  user.rs
backend/src/services/: auth.rs  email.rs  mod.rs  rcv.rs  ses.rs
backend/tests/: auth_integration_tests.rs  auth_unit_tests.rs  candidates_api_tests.rs  polls_api_tests.rs  results_integration_tests.rs  voter_management_complete_tests.rs  voter_management_tests.rs  voting_integration_tests.rs
backend/tests/common/: mod.rs
docs/: API_SPECIFICATION.md  DEVELOPMENT_PROCESS.md  MAKEFILE_COMMANDS.md  RCV_ALGORITHM.md  SVELTE5_GUIDE.md
frontend/: package-lock.json  package.json  playwright.config.ts  playwright.static.config.ts  svelte.config.js  vite.config.ts
frontend/e2e/: E2E_TESTING_SPECIFICATION.md  README.md  auth.test.ts  complete-workflow.test.ts  enhanced-forms.test.ts  homepage.test.ts  integration.test.ts  polls.test.ts  public-voting.test.ts  results-display.test.ts  voter-stats-fix.test.ts  voter-stats-simple.test.ts  voters.test.ts  (+1 more)
(+53 files in other folders)
