[package]
name = "rankchoice-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
ipnetwork = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# AWS Lambda
lambda_runtime = { version = "0.8", optional = true }
lambda-web = { version = "0.2", optional = true }
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-ses = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-dynamodb = "1.0"

# Utilities
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"

[features]
default = []
lambda = ["lambda_runtime", "lambda-web"]

[dev-dependencies]
mockall = "0.12"
proptest = "1.4"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
hyper = "1.0"
serde_json = "1.0"

[[bin]]
name = "rankchoice-api"
path = "src/main.rs"
